[tool.poetry]
name = "isamples-cli"
version = "0.1.1"
description = "Implements a command line client for iSamples"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
httpx = "^0.21.1"
pypeln = "^0.4.7"

[tool.poetry.scripts]
iscli = "isamples_cli.main:main"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
